ImageJ.sh: force java.ext.dirs on MacOSX
Otherwise, ImageJ.sh will use the hopelessly outdated Java3D provided by
MacOSX.

Noticed by Stephan Preibisch.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>