@@ -166,7 +166,15 @@ case "$EXECUTABLE_NAME" in
 	;;
 esac
 
-eval java -Dpython.cachedir.skip=true \
+EXT_OPTION=
+case "$(uname -s)" in
+Darwin)
+	EXT_OPTION=-Djava.ext.dirs="$FIJI_ROOT_SQ"/java/macosx-java3d/Home/lib/ext:/Library/Java/Extensions:/System/Library/Java/Extensions:/System/Library/Frameworks/JavaVM.framework/Home/lib/ext
+	;;
+esac
+
+eval java $EXT_OPTION \
+	-Dpython.cachedir.skip=true \
 	-Xincgc -XX:PermSize=128m \
 	-Dplugins.dir=$FIJI_ROOT_SQ \
 	-Djava.class.path="`sq_quote $CLASSPATH`" \
